sumo/tests/traci/SlowDown/InvalidTimeInterval/slowdown_invalidinterval.prog
simstep 1 1
slowdown 0 10 -1
simstep 100
